--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
             android:exported="false" />
 
         <activity android:name=".HistorialActivity" />
+        <activity android:name=".EstadoActivity" />
     </application>
 
 </manifest>
