Punto de restauración: gestión avanzada de permisos Android 13+, advertencia de optimización de batería en logs, mejoras de robustez

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,8 @@
 
         <activity android:name=".HistorialActivity" />
         <activity android:name=".EstadoActivity" />
+        <activity android:name=".BackupManualSelectivoActivity" />
+        <activity android:name=".LogsActivity" />
     </application>
 
 </manifest>
