Implementar configuración de tipos de archivo personalizable - Agregar funciones en ConfigUtils para guardar/obtener tipos de archivo - Actualizar layout de configuración con checkboxes para diferentes tipos - Actualizar BackupWorker y BackupUtils para usar configuración personalizada - Actualizar BackupManualSelectivoActivity para usar configuración personalizada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity android:name=".EstadoActivity" />
         <activity android:name=".BackupManualSelectivoActivity" />
         <activity android:name=".LogsActivity" />
+        <activity android:name=".BackupProgressActivity" />
     </application>
 
 </manifest>
