Implementación completa de sincronización con GitHub para evitar duplicados entre dispositivos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <activity android:name=".BackupManualSelectivoActivity" />
         <activity android:name=".LogsActivity" />
         <activity android:name=".BackupProgressActivity" />
+        <activity android:name=".GitHubConfigActivity" />
     </application>
 
 </manifest>
